<resources>
    <string name="app_name">SDSUHometownLocations</string>
    <string name="post_user_button_string">Post User</string>
    <string name="view_user_button_string">View User</string>
    <string name="nick_name_label_string"><b> Nick Name: </b></string>
    <string name="nick_name_value_hint_string">Nick Name</string>
    <string name="password_name_string"><b> Password: </b></string>
    <string name="password_value_hint_string">Password</string>
    <string name="country_label_string"><b> Country: </b></string>
    <string name="state_label_string"><b> State: </b></string>
    <string name="set_country_state_button_string">Set Country &amp; State</string>
    <string name="state_value_hint_string"> State </string>
    <string name="city_label_string"><b> City: </b></string>
    <string name="city_value_hint_string">City</string>
    <string name="year_label_string"><b> Year: </b></string>
    <string name="set_location_string">Set Location</string>
    <string name="password_hint_string">Password</string>
    <string name="set_button_string">Set</string>
    <string name="post_to_server_button_string">Post to server</string>
    <string name="view_user_country_label_string"><b>Select Country:</b></string>
    <string name="view_user_state_label_string"><b>Select State:</b></string>
    <string name="view_user_year_label_string"><b>Select Year:</b></string>
    <string name="view_user_list_view_button_string">List View</string>
    <string name="view_user_map_view_button_string">Map view</string>
    <string name="post_user_text_view_string"><b>Post User:</b></string>
    <string name="view_user_text_view_string"><b>View Users:</b></string>
    <string name="clear_all_fields_button_string">Clear fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_set_location_using_map">Map</string>
    <string name="title_activity_view_list_map">Map</string>
</resources>
