<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raghavkishan.sdsuhometownlocations.PostUser">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/nick_name_label_string"
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="6dp"
                android:paddingTop="9dp"
                android:id="@+id/nick_name_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nick_name_value_hint_string"
                android:ems="10"
                android:id="@+id/nick_name_value" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/password_name_string"
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="12dp"
                android:id="@+id/password_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_value"
                android:hint="@string/password_hint_string"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/country_label_string"
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="9dp"
                android:id="@+id/country_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="9dp"
                android:id="@+id/country_value"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/state_label_string"
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="9dp"
                android:id="@+id/state_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="9dp"
                android:id="@+id/state_value"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

        </TableRow>

        <TableRow>

            <TextView />

            <Button
                android:text="@string/set_country_state_button_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_country_state_button"
                android:textAllCaps="false"
                android:onClick="onClickSetCountryAndStateButton"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/city_label_string"
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingBottom="6dp"
                android:paddingTop="9dp"
                android:id="@+id/city_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/city_value_hint_string"
                android:ems="10"
                android:id="@+id/city_value" />

        </TableRow>

        <TableRow>

            <TextView />

            <Button
                android:text="@string/set_location_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_location_on_map_button"
                android:textAllCaps="false"
                android:onClick="onClickLocationButton"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/year_label_string"
                android:textSize="17dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:id="@+id/year_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/year_spinner" />
        </TableRow>

        <TableRow>

            <TextView />

            <Button
                android:text="@string/post_to_server_button_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_to_server_button"
                android:textAllCaps="false"
                android:onClick="postToServer"/>

        </TableRow>

        <TableRow>

            <TextView />

            <Button
                android:text="@string/clear_all_fields_button_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clear_all_fields"
                android:textAllCaps="false"
                android:onClick="clearAllFields"/>

        </TableRow>


    </TableLayout>

</RelativeLayout>
