<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_user_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raghavkishan.sdsuhometownlocations.ViewUserFilterActivity">

    <TextView
        android:text="@string/view_user_country_label_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:id="@+id/view_user_country_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="17dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/view_user_country_spinner"
        android:layout_below="@+id/view_user_country_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/view_user_state_label_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/view_user_state_label"
        android:layout_below="@+id/view_user_country_spinner"
        android:layout_alignStart="@+id/view_user_country_label"
        android:textSize="17dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/view_user_state_spinner"
        android:layout_below="@+id/view_user_state_label"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_user_year_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/view_user_year_spinner" />

    <Button
        android:text="@string/view_user_list_view_button_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view_user_list_map_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="58dp"
        android:id="@+id/view_user_list_view_button"
        android:textAllCaps="false"
        android:onClick="onListView"
        android:drawableLeft="@drawable/ic_action_view_as_list"/>

    <Button
        android:text="@string/view_user_map_view_button_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:id="@+id/view_user_list_map_button"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/view_user_year_spinner"
        android:layout_alignStart="@+id/view_user_year_label"
        android:textAllCaps="false"
        android:onClick="onMapView"
        android:drawableLeft="@drawable/ic_action_map"/>

    <TextView
        android:text="@string/view_user_year_label_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/view_user_year_label"
        android:textSize="17dp"
        android:layout_below="@+id/view_user_state_spinner"
        android:layout_alignStart="@+id/view_user_state_label" />
</RelativeLayout>
